styles:显示效果优化

--- a/packages/components/popover/popover.less
+++ b/packages/components/popover/popover.less
@@ -7,41 +7,44 @@
     color: #606266;
     border: 1px solid rgba(0,8,16,.15);
     box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
-    background: #fff;
-    border-radius: 5px;
+    background-color: hsla(0, 0%, 100%, .5);
+    backdrop-filter: saturate(100%) blur(50px);
+    border-radius: 10px;
     z-index: 100;
 
     .arrow {
       position: absolute;
-      width: 8px;
-      height: 8px;
-      background: #fff;
-      transform: rotate(45deg);
-      border: 1px solid rgba(0,8,16,.15);
+      width: 16px;
+      height: 6px;
+
+      svg {
+        vertical-align: top;
+        .svg-arrow {
+          fill: rgba(0,8,16,.15);
+        }
+        .svg-content {
+          fill: rgba(255, 255, 255, .6);
+        }
+      }
     }
 
     &[data-popper-placement^='top'] > .arrow {
-      bottom: -5px;
-      border-top: none;
-      border-left: none;
+      bottom: -7px;
+      transform: rotate(180deg);
     }
     
     &[data-popper-placement^='bottom'] > .arrow {
-      top: -5px;
-      border-right: none;
-      border-bottom: none;
+      top: -7px;
     }
     
     &[data-popper-placement^='left'] > .arrow {
-      right: -5px;
-      border-left: none;
-      border-bottom: none;
+      right: -12px;
+      transform: rotate(90deg);
     }
     
     &[data-popper-placement^='right'] > .arrow {
-      left: -5px;
-      border-right: none;
-      border-top: none;
+      left: -12px;
+      transform: rotate(-90deg);
     }
   }
 
