--- a/packages/components/confirm/confirm.less
+++ b/packages/components/confirm/confirm.less
@@ -10,8 +10,10 @@
   &-box {
     width: 400px;
     margin: 200px auto;
-    background-color: #fff;
     border-radius: 10px;
+    background-color: #fff;
+    // backdrop-filter: saturate(100%) blur(50px);
+    box-shadow: 0 0 50px -10px rgba(0, 0, 0, 0.3);
     overflow: hidden;
 
     &__header {
