--- a/packages/components/layer/layer.less
+++ b/packages/components/layer/layer.less
@@ -4,16 +4,17 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 1000;
   overflow: auto;
 
   &__inner {
     width: 50%;
     margin: 100px auto;
-    background-color: #fff;
+    background-color: hsla(0, 0%, 100%, 1);
     border-radius: 10px;
-    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 50px -10px rgba(0, 0, 0, 0.3);
+    will-change: background-color, transform;
 
     .vc-layer.is-fullscreen & {
       width: 100vw;
