--- a/packages/components/notification/notification.less
+++ b/packages/components/notification/notification.less
@@ -9,8 +9,8 @@
   padding: 5px;
   width: 300px;
   border-radius: 10px;
-  backdrop-filter: saturate(180%) blur(20px);
-  background-color: rgba(255,255,255,0.72);
+  backdrop-filter: saturate(100%) blur(50px);
+  background-color: hsla(0, 0%, 100%, 0.5);
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, .3);
   transition: opacity .3s, transform .4s;
 }
