--- a/packages/components/confirm/confirm.less
+++ b/packages/components/confirm/confirm.less
@@ -5,15 +5,17 @@
   width: 100vw;
   height: 100vh;
   z-index: 2000;
-  background-color: rgba(0, 0, 0, .3);
-
+  background-color: rgba(0, 0, 0, .1);
+  
   &-box {
     width: 400px;
     margin: 200px auto;
     border-radius: 10px;
-    background-color: #fff;
-    // backdrop-filter: saturate(100%) blur(50px);
+    background-color: hsla(0, 0%, 100%, 0.5);
+    backdrop-filter: saturate(100%) blur(50px);
+    border: 1px solid rgba(255,255,255,.3);
     box-shadow: 0 0 50px -10px rgba(0, 0, 0, 0.3);
+    box-sizing: border-box;
     overflow: hidden;
 
     &__header {
