--- a/packages/styles/transition.less
+++ b/packages/styles/transition.less
@@ -2,7 +2,7 @@
 .vc-fade-enter-active,
 .vc-fade-leave-active {
   opacity: 1;
-  transition: opacity 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: opacity .3s cubic-bezier(0.23, 1, 0.32, 1);
   transform-origin: center top;
 }
 .vc-fade-enter-from,
@@ -49,6 +49,29 @@
   }
   100% {
     opacity: 0;
+  }
+}
+
+.vc-backdrop-animate-enter-active {
+  animation: vc-backdrop-black-animate-enter .35s;
+}
+@keyframes vc-backdrop-black-animate-enter {
+  from {
+    background: rgba(0, 0, 0, 0);
+  }
+  to {
+    background: rgba(0, 0, 0, .1);
+  }
+}
+.vc-backdrop-animate-leave-active {
+  animation: vc-backdrop-black-animate-leave .35s;
+}
+@keyframes vc-backdrop-black-animate-leave {
+  from {
+    background: rgba(0, 0, 0, .1);
+  }
+  to {
+    background: rgba(0, 0, 0, 0);
   }
 }
 
