--- a/packages/components/confirm/confirm.less
+++ b/packages/components/confirm/confirm.less
@@ -11,9 +11,9 @@
     width: 400px;
     margin: 200px auto;
     border-radius: 10px;
-    background-color: hsla(0, 0%, 100%, 0.5);
-    backdrop-filter: saturate(100%) blur(50px);
-    border: 1px solid rgba(255,255,255,.3);
+    background-color: hsla(0, 0%, 100%, 0.85);
+    backdrop-filter: saturate(100%) blur(10px);
+    border: 1px solid #fff;
     box-shadow: 0 0 50px -10px rgba(0, 0, 0, 0.3);
     box-sizing: border-box;
     overflow: hidden;
