--- a/packages/components/popover/popover.less
+++ b/packages/components/popover/popover.less
@@ -23,27 +23,27 @@
           fill: rgba(0,8,16,.15);
         }
         .svg-content {
-          fill: rgba(255, 255, 255, .6);
+          fill: #fff;
         }
       }
     }
 
     &[data-popper-placement^='top'] > .arrow {
-      bottom: -7px;
+      bottom: -6px;
       transform: rotate(180deg);
     }
     
     &[data-popper-placement^='bottom'] > .arrow {
-      top: -7px;
+      top: -6px;
     }
     
     &[data-popper-placement^='left'] > .arrow {
-      right: -12px;
+      right: -11px;
       transform: rotate(90deg);
     }
     
     &[data-popper-placement^='right'] > .arrow {
-      left: -12px;
+      left: -11px;
       transform: rotate(-90deg);
     }
   }
