feat:调整字体库

--- a/packages/components/icon/icon.less
+++ b/packages/components/icon/icon.less
@@ -18,6 +18,22 @@
 	-moz-osx-font-smoothing: grayscale
 }
 
+.vc-icon-upload:before {
+  content: "\e66c";
+}
+
+.vc-icon-download:before {
+  content: "\e66d";
+}
+
+.vc-icon-download-cloud:before {
+  content: "\e671";
+}
+
+.vc-icon-upload-cloud:before {
+  content: "\e672";
+}
+
 .vc-icon-text:before {
   content: "\e79d";
 }
@@ -246,20 +262,12 @@
   content: "\e701";
 }
 
-.vc-icon-upload:before {
-  content: "\e702";
-}
-
 .vc-icon-user:before {
   content: "\e704";
 }
 
 .vc-icon-user-solid:before {
   content: "\e705";
-}
-
-.vc-icon-upload1:before {
-  content: "\e706";
 }
 
 .vc-icon-video-camera-solid:before {
@@ -728,10 +736,6 @@
 
 .vc-icon-edit:before {
   content: "\e681";
-}
-
-.vc-icon-download:before {
-  content: "\e682";
 }
 
 .vc-icon-coin:before {
@@ -1232,17 +1236,4 @@
 
 .vc-icon-rectangle:before {
   content: "\e88e";
-}
-
-.vc-icon-loading {
-  animation: rotating 2s linear infinite;
-}
-
-@keyframes rotating {
-  0% {
-    transform: rotateZ(0deg);
-  }
-  100% {
-    transform: rotateZ(360deg);
-  }
 }
