styles:计数器错误示例

--- a/packages/components/formItem/formItem.less
+++ b/packages/components/formItem/formItem.less
@@ -52,7 +52,13 @@
   }
 
   &.is-error {
+    // 输入框
     .vc-input {
+      border-color: #ff4d4f;
+    }
+
+    // 计数器
+    .vc-input-number__input {
       border-color: #ff4d4f;
     }
 
