--- a/packages/components/progress/progress.less
+++ b/packages/components/progress/progress.less
@@ -25,7 +25,7 @@
       &__item {
         position: relative;
         height: 100%;
-        width: var(--width);
+        width: calc(1% * var(--width));
         // border-radius: inherit;
         color: var(--color, inherit);
         background-color: currentColor;
@@ -52,11 +52,12 @@
           animation: vc-progress-active 1.5s infinite linear;
         }
         
-        &::before {
-          display: block;
-          counter-reset: progress var(--width);
-          content: counter(progress);
-        }
+        // 使用变量方式显示进度
+        // &::before {
+        //   display: block;
+        //   counter-reset: progress var(--width);
+        //   content: counter(progress) + '%';
+        // }
         &::before,
         span {
           display: grid;
