--- a/packages/components/icon/icon.less
+++ b/packages/components/icon/icon.less
@@ -1237,3 +1237,16 @@
 .vc-icon-rectangle:before {
   content: "\e88e";
 }
+
+.vc-icon-loading {
+  animation: rotating 2s linear infinite;
+}
+
+@keyframes rotating {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
