--- a/packages/components/pagination/pagination.less
+++ b/packages/components/pagination/pagination.less
@@ -23,7 +23,7 @@
       height: 5px;
       border-width: 0 0 2px 2px;
       border-style: solid;
-      border-color: #333;
+      border-color: #606266;
     }
     
     &.prev-btn::after {
@@ -41,7 +41,7 @@
       cursor: not-allowed;
 
       &::after {
-        border-color: #aaa;
+        border-color: #ccc;
       }
     }
   }
@@ -74,7 +74,7 @@
 
       &.is-active {
         color: #fff;
-        background-color: #09f;
+        background-color: var(--bgColor, #09f);
       }
     }
   }
@@ -86,7 +86,7 @@
     margin: 0 3px;
     font-size: 14px;
     line-height: 2em;
-    color: #333;
+    color: #606266;
     text-align: center;
     cursor: pointer;
     user-select: none;
