--- a/packages/components/collapseItem/collapseItem.less
+++ b/packages/components/collapseItem/collapseItem.less
@@ -1,5 +1,5 @@
 .vc-collapse-item {
-color: @color-text-primary;
+  color: @color-text-primary;
   border-top: 1px solid #ebeef5;
 
   &__header {
@@ -17,7 +17,7 @@ color: @color-text-primary;
   &__icon {
     transition: transform .35s;
 
-    .vc-collapse-item.is-open & {
+    &.is-open {
       transform: rotate(90deg);
     }
   }
