--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -17,24 +17,9 @@
       width: 100%;
       height: 100%;
       border-radius: 3px;
-      border: 1px solid rgba(0, 0, 0, .3);
+      box-shadow: inset 1px 1px 3px rgba(0, 0, 0, .4);
       box-sizing: border-box;
       cursor: pointer;
-    }
-
-    &.is-empty {
-      background: #fff;
-
-      &::after {
-        position: absolute;
-        top: 50%;
-        left: 0;
-        content: "";
-        width: 100%;
-        height: 0px;
-        border-bottom: 1px solid rgba(0, 0, 0, .3);
-        transform: rotate(45deg);
-      }
     }
 
     &,
@@ -197,4 +182,8 @@
   margin-top: 7px;
   border-radius: 5px;
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);
+
+  input {
+    background: transparent;
+  }
 }
