--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -17,7 +17,7 @@
       width: 100%;
       height: 100%;
       border-radius: 3px;
-      box-shadow: inset 1px 1px 3px rgba(0, 0, 0, .4);
+      box-shadow: inset 1px 1px 3px rgba(0, 0, 0, .4), inset -1px -1px 1px rgba(0, 0, 0, .1);
       box-sizing: border-box;
       cursor: pointer;
     }
