--- a/packages/components/table/table.less
+++ b/packages/components/table/table.less
@@ -3,6 +3,7 @@
 
   table {
     width: 100%;
+    margin: 0;
   }
   
   thead {
@@ -11,7 +12,9 @@
       font-size: 14px;
       text-align: left;
       color: #666;
+      border: none;
       border-bottom: 2px solid #eee;
+      background-color: transparent;
     }
   }
   tbody {
