:lipstick: 优化滚动条显示效果

--- a/.vipress/src/assets/markdown-theme.less
+++ b/.vipress/src/assets/markdown-theme.less
@@ -136,6 +136,13 @@ article {
     }
   }
 
+  mark {
+    padding: 1px 5px;
+    border-radius: 3px;
+    color: #fff;
+    background-color: #ff9800;
+  }
+
   // Emphasis
   em {
     font-style: italic;
@@ -158,6 +165,10 @@ article {
     p {
       margin: 0;
       color: var(--page-txt-color);
+    }
+
+    code {
+      background-color: var(--blockquote-code);
     }
 
   }
