--- a/.vipress/src/assets/theme.less
+++ b/.vipress/src/assets/theme.less
@@ -1,48 +1,3 @@
-.lighten(@counter) when (@counter >= 0) {
-  .lighten((@counter - 5));  
-  --gray@{counter}: lighten(black, @counter); 
-}
-
-.darken(@counter) when (@counter >= 0) {
-  --gray@{counter}: darken(white, @counter); 
-  .darken((@counter - 5));  
-}
-
-.otherColor(@name, @color) {
-  --@{name}: @color;
-  --@{name}Hover: lighten(@color, 10);
-  --@{name}Active: darken(@color, 10);
-}
-
-.normalColor {
-  .otherColor(link, #2b65ec);
-  .otherColor(success, #4aa02c);
-  .otherColor(warn, #ee9a4d);
-  .otherColor(error, #e41b17);
-}
-
-.light-scheme {
-  // 调用循环
-  .lighten(100); 
-  .normalColor
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    .light-scheme   
-  }
-}
-
-.dark-scheme {
-  .darken(100); 
-  .normalColor       
-}
-@media (prefers-color-scheme: dark) {
-  :root {
-    .dark-scheme    
-  }
-}
-
 :root {
   --page-hold-color: #42b983;
   --page-hold-bg-color: rgba(66, 185, 131, .05);
@@ -59,6 +14,7 @@
   --table-even-bg: #eee;
   --article-blockquote-color: #42b983;
   --article-blockquote-bg: rgba(66, 185, 130, .1);
+  --blockquote-code: #fff;
 
   --code-pre-bg: #fff;
   --code-inline-bg: rgba(0, 0, 0, .1);
@@ -76,6 +32,9 @@
 }
 
 html.dark {
+  --page-hold-color: #42b983;
+  --page-hold-bg-color: rgba(208, 208, 208, .15);
+
   --page-bg-color: #222;
   --page-txt-color: #f5f5f5;
   --page-info-color: #777;
@@ -87,7 +46,10 @@ html.dark {
   --article-line-color: #666;
   --table-even-bg: #373737;
 
-  --code-pre-bg: #000;
+  --article-blockquote-bg: rgba(208, 208, 208, .15);
+  --blockquote-code: #222;
+
+  --code-pre-bg: rgba(208, 208, 208, .15);
   --code-inline-bg: rgba(255, 255, 255, .1);
   --code-txt-color: #ddd;
   --code-lang-color: rgba(255, 255, 255, 0.3);
@@ -102,17 +64,28 @@ html.dark {
   --codebox-hover-shadow: rgba(0, 0, 0, 1);
 }
 
+::-webkit-scrollbar {
+	width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: currentColor;
+	border-radius: 3px;
+}
+
+::-webkit-scrollbar-track {
+	margin: 62px 0 2px 0;
+}
+
 html {
 	scroll-behavior: smooth;
+  color: transparent;
+  transition: color .3s ease-in-out;
   
-  &::-webkit-scrollbar {
-    width: 5px;
-    background-color: var(--scroll-bar-color);
+  &:hover {
+    color: var(--scroll-thumb-color);
   }
-  &::-webkit-scrollbar-thumb {
-    background-color: var(--scroll-thumb-color);
-    border-radius: 5px;
-  }
+  
   &::-webkit-scrollbar-track {
     margin: 62px 0 2px 0;
   }
