:ambulance: 修复示例无法正常显示

--- a/packages/components/tabs/tabs.less
+++ b/packages/components/tabs/tabs.less
@@ -47,6 +47,9 @@
   &__nav {
     float: left;
     position: relative;
+    margin: 0;
+    padding: 0;
+    list-style: none;
     // min-width: 100%;
     box-sizing: border-box;
     white-space: nowrap;
