--- a/.vipress/src/assets/theme.less
+++ b/.vipress/src/assets/theme.less
@@ -68,37 +68,14 @@ html.dark {
   --codebox-hover-shadow: rgba(0, 0, 0, 1);
 }
 
-::-webkit-scrollbar {
-	width: 3px;
-}
-
-::-webkit-scrollbar-thumb {
-	background-color: currentColor;
-	border-radius: 3px;
-}
-
-::-webkit-scrollbar-track {
-	margin: 62px 0 2px 0;
-}
-
 html {
 	scroll-behavior: smooth;
-  color: transparent;
-  transition: color .3s ease-in-out;
-  
-  &:hover {
-    color: var(--scroll-thumb-color);
-  }
-  
-  &::-webkit-scrollbar-track {
-    margin: 62px 0 2px 0;
-  }
 }
 
 body {
   overscroll-behavior: none;
   background-color: var(--page-bg-color);
-  transition: background .4s ease-out;
+  transition: background .4s ease-in-out;
   will-change: background;
 }
 
