全屏功能测试

--- a/.vipress/src/assets/theme.less
+++ b/.vipress/src/assets/theme.less
@@ -70,9 +70,11 @@ html.dark {
 
 html {
 	scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
+  width: 100vw;
   overscroll-behavior: none;
   background-color: var(--page-bg-color);
   transition: background .3s ease-in-out;
