--- a/.vipress/src/components/codeBox/style.less
+++ b/.vipress/src/components/codeBox/style.less
@@ -29,6 +29,10 @@
       will-change: height;
       background-color: var(--page-bg-color);
 
+      &.no-animate {
+        transition: none;
+      }
+
       & pre[class*='language-'] {
         margin: 0;
         background-color: transparent;
@@ -93,5 +97,12 @@
         overflow: auto;
       }
     }
+  }
+
+  .control-bar {
+    width: 100%;
+    height: 3px;
+    background-color: #00f;
+    cursor: n-resize;
   }
 }
