--- a/packages/components/layer/layer.less
+++ b/packages/components/layer/layer.less
@@ -20,7 +20,7 @@
     transform-origin: top left;
 
     .vc-layer.fullscreen & {
-      width: 100%;
+      width: 100vw;
       height: 100%;
       margin: 0;
       border-radius: 0;
