--- a/packages/fonts/index.less
+++ b/packages/fonts/index.less
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "vc-icons";
-  src: url("../../fonts/iconfont.woff") format('woff'),
-       url("../../fonts/iconfont.ttf") format('truetype'); /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
+  src: url("./iconfont.woff") format('woff'),
+       url("./iconfont.ttf") format('truetype'); /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
 }
 
 [class*=" vc-icon-"],[class^=vc-icon-] {
