perf: 优化表格，调整宽度显示能力

--- a/packages/components/table/index.less
+++ b/packages/components/table/index.less
@@ -2,6 +2,7 @@
 
 .vc-table {
   position: relative;
+  overflow: auto;
 
   table {
     width: 100%;
@@ -16,7 +17,7 @@
       color: #666;
       border: none;
       border-bottom: 2px solid #eee;
-      background-color: transparent;
+      background-color: #fff;
     }
   }
   tbody {
@@ -26,7 +27,7 @@
       color: #666;
       word-break: break-all;
       border-bottom: 1px solid #eee;
-      background-color: transparent;
+      background-color: #fff;
       transition: background-color .3s ease-in-out;
     }
 
