fix: 分页随机滚动问题

--- a/packages/components/table/index.less
+++ b/packages/components/table/index.less
@@ -2,7 +2,11 @@
 
 .vc-table {
   position: relative;
-  overflow: auto;
+  
+  &--content {
+    width: 100%;
+    overflow: auto;
+  }
 
   table {
     width: 100%;
