--- a/packages/components/layer/index.less
+++ b/packages/components/layer/index.less
@@ -8,7 +8,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 1000;
-  overflow: hidden;
+  overflow: auto;
 
   &--inner {
     width: 50%;
