:lipstick: 优化单选显示

--- a/packages/components/table/index.less
+++ b/packages/components/table/index.less
@@ -34,6 +34,11 @@
       border-bottom: 1px solid #eee;
       background-color: #fff;
       transition: background-color .3s ease-in-out;
+
+      // 调整显示间隔
+      .vc-radio, .vc-radio__label {
+        margin: 0;
+      }
     }
 
     tr:hover {
