--- a/packages/components/colorPicker/index.less
+++ b/packages/components/colorPicker/index.less
@@ -17,8 +17,8 @@
       width: 100%;
       height: 100%;
       border-radius: 3px;
-      box-shadow: inset 1px 1px 3px rgba(0, 0, 0, .4), inset -1px -1px 1px rgba(0, 0, 0, .1);
       box-sizing: border-box;
+      border: 1px solid rgba(0, 0, 0, .4);
       cursor: pointer;
     }
 
@@ -29,10 +29,11 @@
   }
 
   &__drop-down {
-    position: absolute;
+    position: fixed;
     z-index: 2000;
     box-sizing: content-box;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, .8);
+    backdrop-filter: blur(5px);
     width: 230px;
     border-radius: 4px;
     box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
@@ -102,11 +103,13 @@
   }
 }
 
+// 色彩选择面板
 .vc-color-picker__hsl {
   &-panel {
     position: relative;
     width: 100%;
     height: 125px;
+    user-select: none;
     background: 
       linear-gradient(0deg,#000,transparent),
       linear-gradient(90deg,#fff,hsla(0,0%,100%,0));
