--- a/packages/components/popover/index.less
+++ b/packages/components/popover/index.less
@@ -2,6 +2,7 @@
   display: inline-block;
 
   &__layer {
+    position: fixed;
     padding: 10px;
     font-size: 14px;
     color: #606266;
@@ -10,12 +11,32 @@
     background-color: hsla(0, 0%, 100%, .85);
     backdrop-filter: saturate(100%) blur(10px);
     border-radius: 10px;
-    z-index: 100;
+    box-sizing: border-box;
+    z-index: 10000;
 
     .arrow {
       position: absolute;
       width: 16px;
       height: 6px;
+
+      &[placement^='top'] {
+        bottom: -6px;
+        transform: rotate(180deg);
+      }
+      
+      &[placement^='bottom'] {
+        top: -6px;
+      }
+      
+      &[placement^='left'] {
+        right: -11px;
+        transform: rotate(90deg);
+      }
+      
+      &[placement^='right'] {
+        left: -11px;
+        transform: rotate(-90deg);
+      }
 
       svg {
         vertical-align: top;
@@ -28,29 +49,33 @@
       }
     }
 
-    &[data-popper-placement^='top'] > .arrow {
-      bottom: -6px;
-      transform: rotate(180deg);
-    }
     
-    &[data-popper-placement^='bottom'] > .arrow {
-      top: -6px;
-    }
-    
-    &[data-popper-placement^='left'] > .arrow {
-      right: -11px;
-      transform: rotate(90deg);
-    }
-    
-    &[data-popper-placement^='right'] > .arrow {
-      left: -11px;
-      transform: rotate(-90deg);
-    }
   }
 
   &__title {
     padding: 0 0 5px;
     font-size: 16px;
     color: #333;
+  }
+
+  &__footer {
+    text-align: right;
+
+    button {
+      padding-left: 10px;
+      font-size: 14px;
+      color: #9e9e9e;
+      border: none;
+      cursor: pointer;
+      background-color: transparent;
+
+      &:hover {
+        opacity: .8;
+      }
+
+      &[type=submit] {
+        color: #09f;
+      }
+    }
   }
 }
