--- a/packages/components/timePicker/index.less
+++ b/packages/components/timePicker/index.less
@@ -1,35 +1,20 @@
+@import '../../styles/var.less';
+@import '../../styles/transition.less';
+
 .vc-time-picker {
   &__clock-mod {
-    border-radius: 3px;
-    border: 1px solid rgba(0,8,16,.15);
+    position: absolute;
+    border-radius: 5px;
     box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
     background-color: #fff;
-
-    & > .arrow {
-      position: absolute;
-      width: 8px;
-      height: 8px;
-      background: #fff;
-      transform: rotate(45deg);
-      border: 1px solid rgba(0,8,16,.15);
-    }
-
-    &[data-popper-placement^='bottom'] > .arrow {
-      top: -5px;
-      border-right: none;
-      border-bottom: none;
-    }
-    &[data-popper-placement^='top'] > .arrow {
-      bottom: -5px;
-      border-top: none;
-      border-left: none;
-    }
+    background-color: hsla(0, 0%, 100%, .85);
+    backdrop-filter: saturate(100%) blur(10px);
   }
 
   &__footer {
     padding: 0 5px;
     text-align: right;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #eee;
 
     button {
       padding: 7px;
