feat: 更新字体图标

--- a/packages/fonts/index.less
+++ b/packages/fonts/index.less
@@ -1210,7 +1210,7 @@
   content: "\e74d";
 }
 
-.vc-icon-ali-clould:before {
+.vc-icon-hard-disk:before {
   content: "\e74e";
 }
 
@@ -1238,15 +1238,3 @@
   content: "\e88e";
 }
 
-.vc-icon-loading {
-  animation: rotating 2s linear infinite;
-}
-
-@keyframes rotating {
-  0% {
-    transform: rotateZ(0deg);
-  }
-  100% {
-    transform: rotateZ(360deg);
-  }
-}
