--- a/packages/components/input/index.less
+++ b/packages/components/input/index.less
@@ -1,8 +1,11 @@
+@placeholderColor: #c0c4cc;
+
 .vc-input {
   position: relative;
   display: flex;
+  padding:.4em;
   vertical-align: middle;
-  align-items: center;
+  align-items: stretch;
   box-sizing: border-box;
   border: 1px solid #dcdfe6;
   border-radius: 3px;
@@ -26,7 +29,7 @@
   &__suffix-icon,
   &__prefix-icon {
     display: flex;
-    justify-content: center;
+    align-items: center;
     color: #c0c4cc;
 
     &:empty {
@@ -34,25 +37,23 @@
     }
   }
   &__prefix-icon {
-    padding-left: 5px;
-  }
-  &__suffix-icon {
     padding-right: 5px;
   }
+  // &__suffix-icon {
+  //   padding-right: 5px;
+  // }
 
   &__text {
     -webkit-appearance: none;
     width: 100%;
-    height: 100%;
-    padding:.4em 5px;
+    flex: 1;
     border: 0;
     outline: none;
     cursor: inherit;
     background: transparent;
   
-    input::-webkit-input-placeholder,
-    textarea::-webkit-input-placeholder {
-      color: #d9d9d9;
+    &::-webkit-input-placeholder{
+      color: @placeholderColor;
     }
 
     &::-ms-reveal, 
@@ -83,17 +84,21 @@
   
   &__textarea {
     display: block;
-    padding: 5px;
     line-height: 1.5;
     width: 100%;
     border: none;
     outline: none;
     resize: vertical;
-    background: #fff;
+    font-size: inherit;
+    background: transparent;
     font-family: inherit;
     
     &:hover {
       cursor: inherit;
+    }
+
+    &::-webkit-input-placeholder{
+      color: @placeholderColor;
     }
   }
 
