--- a/packages/components/collapseItem/index.less
+++ b/packages/components/collapseItem/index.less
@@ -6,9 +6,10 @@
 
   &__header {
     display: flex;
+    padding: 10px 0;
     font-size: 14px;
     font-weight: bold;
-    line-height: 3;
+    line-height: 1.6;
     align-items: center;
   }
 
