--- a/packages/components/upload/index.less
+++ b/packages/components/upload/index.less
@@ -28,9 +28,19 @@
     .item-name {
       font-size: 14px;
     }
+
     .item-status {
-      position: relative;
-      text-align: right;
+      display: flex;
+      justify-content: flex-end;
+
+      i {
+        font-size: 14px;
+        width: 1.2em;
+        height: 1.2em;
+        line-height: 1.2;
+        text-align: center;
+        vertical-align: top;
+      }
 
       .vc-icon-upload {
         color: #777;
@@ -41,30 +51,32 @@
       .vc-icon-error {
         color: #ff4d4f;
       }
-      .remove {
-        position: absolute;
-        right: 0;
-        padding: 2px;
-        font-size: 14px;
-        color: transparent;
-        background: transparent;
-        transition: color .35s, background .35s;
-        border-radius: 100%;
-        cursor: pointer;
 
-        &:hover {
-          color: rgba(0, 0, 0, .6);
-        }
+      .remove {
+        width: 0;
+        opacity: 0;
+        background: transparent;
+        overflow: hidden;
+        box-sizing: border-box;
+        cursor: pointer;
+        transition: width .35s ease-out, opacity .35s ease-out;
       }
     }
-
+    
     &:hover {
       background: rgba(0, 0, 0, .05);
-
+      
       .remove {
-        color: rgba(0, 0, 0, .3);
-        background: #f5f5f5;
+        width: 1.2em;
+        opacity: 1;
       }
+    }
+  }
+
+  &-content {
+    ul {
+      margin: 14px 0;
+      padding: 0;
     }
   }
 }
