--- a/packages/components/input/index.less
+++ b/packages/components/input/index.less
@@ -22,7 +22,7 @@
   &:focus-within,
   &.is-focus {
     border-color: #409eff;
-    box-shadow: 0 0 0 2px rgb(195, 231, 255);
+    box-shadow: 0 0 0 2px rgba(33, 150, 243, .35);
   }
   &.is-disabled {
     cursor: not-allowed;
