--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -3,3 +3,7 @@
 @color-text-regular: #606266;
 @color-text-secondary: #909399;
 @color-text-placeholder: #C0C4CC;
+
+// table
+@table-text-color: @color-text-regular;
+@table-border-color: rgba(0, 0, 0, 0.1);
