perf: 细节调整与优化

--- a/packages/components/table/index.less
+++ b/packages/components/table/index.less
@@ -16,12 +16,16 @@
   
   thead {
     th {
-      padding: 10px 5px;
-      font-size: 14px;
-      text-align: left;
-      color: @table-text-color;
-      border: none;
       border-bottom: 2px solid @table-border-color;
+      
+      .cell {
+        
+        padding: 10px 5px;
+        font-size: 14px;
+        text-align: left;
+        color: @table-text-color;
+        border: none;
+      }
     }
   }
 
