--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -1,8 +1,19 @@
+@primary-color: #09f;
+@success-color: #4CAF50;
+@warning-color: #FF9800;
+@danger-color: #ff4d4f;
+
 // font color
 @color-text-primary: #303133;
 @color-text-regular: #606266;
 @color-text-secondary: #909399;
 @color-text-placeholder: #C0C4CC;
+
+// button
+@btn-primary-color: @primary-color;
+@btn-success-color: @success-color;
+@btn-warn-color: @warning-color;
+@btn-error-color: @danger-color;
 
 // table
 @table-text-color: @color-text-regular;
