--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -1,3 +1,5 @@
+@namespace: vc;
+
 @primary-color: #09f;
 @success-color: #4CAF50;
 @warning-color: #FF9800;
@@ -18,3 +20,10 @@
 // table
 @table-text-color: @color-text-regular;
 @table-border-color: rgba(0, 0, 0, 0.1);
+
+// tag
+@tag-text-color: @color-text-regular;
+@tag-info-color: @primary-color;
+@tag-success-color: @success-color;
+@tag-warning-color: @warning-color;
+@tag-danger-color: @danger-color;
