--- a/packages/components/select/index.less
+++ b/packages/components/select/index.less
@@ -21,7 +21,7 @@
       border: 1px solid #ddd;
       box-sizing: border-box;
       outline: none;
-      transition: border .3s;
+      transition: border 0.3s;
 
       &:hover {
         border-color: #aaa;
@@ -48,7 +48,7 @@
       top: 50%;
       color: @color-text-placeholder;
       transform: translateY(-50%);
-      transition: transform .3s;
+      transition: transform 0.3s;
 
       .is-open & {
         transform: translateY(-50%) rotateZ(-180deg);
@@ -63,7 +63,7 @@
           opacity: 0;
         }
         .clearable:hover & {
-          opacity: .7;
+          opacity: 0.7;
         }
       }
       &.vc-icon-arrow-down {
@@ -89,13 +89,13 @@
   }
 }
 
-.vc-select-option  {
+.vc-select-option {
   display: flex;
   padding: 0 1em;
   align-items: center;
   line-height: 2.8em;
   color: @color-text-regular;
-  transition: color .3s, font-weight .3s;
+  transition: color 0.3s, font-weight 0.3s;
 
   &:hover {
     background-color: #f5f7fa;
@@ -141,9 +141,9 @@
     background-color: #f4f4f5;
 
     i {
-      opacity: .5;
+      opacity: 0.5;
       cursor: pointer;
-      transition: opacity .3s;
+      transition: opacity 0.3s;
 
       &:hover {
         opacity: 1;
@@ -180,10 +180,10 @@
   width: 200px;
   border: 1px solid #ddd;
   background-color: #fff;
-  background-color: hsla(0, 0%, 100%, .85);
+  background-color: hsla(0, 0%, 100%, 0.85);
   backdrop-filter: saturate(100%) blur(10px);
   border-radius: 5px;
-  box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
 
   & ul {
     margin: 5px 0;
@@ -191,5 +191,4 @@
     max-height: 200px;
     overflow: auto;
   }
-
 }
