--- a/packages/components/tag/index.less
+++ b/packages/components/tag/index.less
@@ -3,11 +3,13 @@
 .@{namespace}-tag {
   position: relative;
   display: inline-block;
-  padding: .6em .8em;
+  padding: 0.6em 0.8em;
   font-size: var(--size);
   line-height: 1em;
   color: @tag-text-color;
   box-sizing: border-box;
+  vertical-align: top;
+  border: 1px solid transparent;
 
   &--success {
     color: @tag-success-color;
@@ -36,15 +38,15 @@
     z-index: 1;
     pointer-events: none;
   }
-  
+
   &::before {
     background-color: currentColor;
     border-radius: inherit;
-    opacity: .15;
+    opacity: 0.15;
   }
 
   &::after {
-    opacity: .3;
+    opacity: 0.3;
     border-radius: inherit;
     border: 1px solid currentColor;
     border-width: var(--border);
@@ -58,9 +60,7 @@
     border-radius: 100%;
     cursor: pointer;
     transform: translateX(4px);
-    transition: 
-      background-color .3s ease-in-out,
-      color .3s ease-in-out;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 
     &:hover {
       background-color: currentColor;
