调整默认标签文字颜色

--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -22,7 +22,7 @@
 @table-border-color: rgba(0, 0, 0, 0.1);
 
 // tag
-@tag-text-color: @color-text-regular;
+@tag-text-color: @color-text-secondary;
 @tag-info-color: @primary-color;
 @tag-success-color: @success-color;
 @tag-warning-color: @warning-color;
