:art: 优化功能与样式

--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -1,21 +1,23 @@
 @namespace: vc;
 
 @primary-color: #09f;
-@success-color: #4CAF50;
-@warning-color: #FF9800;
+@success-color: #4caf50;
+@warning-color: #ff9800;
 @danger-color: #ff4d4f;
 
 // font color
 @color-text-primary: #303133;
 @color-text-regular: #606266;
 @color-text-secondary: #909399;
-@color-text-placeholder: #C0C4CC;
+@color-text-placeholder: #c0c4cc;
 
 // button
+@btn-default-text-color: @color-text-regular;
 @btn-primary-color: @primary-color;
 @btn-success-color: @success-color;
 @btn-warn-color: @warning-color;
 @btn-error-color: @danger-color;
+@btn-disabled-text-color: @color-text-secondary;
 
 // table
 @table-text-color: @color-text-regular;
