--- a/packages/components/button/index.less
+++ b/packages/components/button/index.less
@@ -1,144 +1,227 @@
 @import '../../styles/var.less';
 
-.default (@name, @color) {
-  &.@{name} {
-    color: @color;
-    border-color: currentColor;
-    background-color: currentColor;
-
-    .vc-button--icon,
-    span {
-      color: #fff;
-    }
-
-    &:hover {
-      color: @color;
-      border-color: @color;
-    }
-
-    &.plain {
-      color: @color;
-
-      span {
-        color: @color;
-      }
-
-      &:hover {
-        border-color: @color;
-      }
-    }
-  }
-
-  &[type='text'] {
-    &.@{name} {
-      span {
-        color: @color;
-      }
-    }
-
-    &[disabled] span {
-      color: inherit;
-    }
-  }
-
-  &[disabled] {
-    &.@{name} {
-      border-color: lighten(@color, 25%);
-      background-color: lighten(@color, 25%);
-
-      &.plain {
-        color: lighten(@color, 25%);
-
-        span {
-          color: inherit;
-        }
-
-        &:hover {
-          border-color: lighten(@color, 25%);
-        }
-      }
-    }
-
-    cursor: not-allowed;
-  }
-}
-
-.vc-button {
+.@{namespace}-button {
+  position: relative;
   padding: 0.25em 0.8em 0.3em;
   font-size: 14px;
-  color: #666;
+  // color: var(--color, #fff);
   word-break: keep-all;
   border-radius: 0.15em;
-  border: 1px solid #ddd;
-  background: #fff;
+  border: 1px solid transparent;
   box-sizing: border-box;
+  background-color: transparent;
   transition: 0.1s;
   cursor: pointer;
   outline: none;
 
-  span {
-    transition: 0.1s;
+  &::after,
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    pointer-events: none;
+    border-radius: inherit;
+    box-sizing: inherit;
   }
 
-  &.default {
-    &.plain {
-      border-color: #ddd;
-    }
+  &::before {
+    background-color: transparent;
+    border: 1px solid currentColor;
+    opacity: 0.3;
+    transition: opacity 0.2s, background 0.2s;
+  }
 
-    &:hover {
-      color: #09f;
-      border-color: #09f;
-    }
+  &::after {
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.05);
+    transition: opacity 0.2s, background 0.2s;
+  }
+
+  span {
+    position: relative;
+    z-index: 2;
+    transition: 0.1s;
+    color: @btn-default-text-color;
   }
 
   &[disabled] {
-    color: #aaa;
+    opacity: 0.6;
+    cursor: not-allowed;
 
-    &:hover {
-      color: #aaa;
-      border-color: #ddd;
+    span {
+      color: @btn-disabled-text-color;
     }
   }
 
-  .default(primary, @btn-primary-color);
-  .default(success, @btn-success-color);
-  .default(warn, @btn-warn-color);
-  .default(error, @btn-error-color);
+  &:hover {
+    &::before {
+      opacity: 0.4;
+    }
+    &::after {
+      opacity: 1;
+    }
+  }
+
+  &:active {
+    &::after {
+      opacity: 1;
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+  }
 
   &.plain {
-    border-color: currentColor;
     background-color: transparent;
 
     &[disabled] {
       background-color: transparent;
+    }
+  }
+
+  // 自定义与颜色 =============================
+  &--theme-primary {
+    color: @btn-primary-color;
+  }
+  &--theme-success {
+    color: @btn-success-color;
+  }
+  &--theme-warn {
+    color: @btn-warn-color;
+  }
+  &--theme-error {
+    color: @btn-error-color;
+  }
+  &.customize-color {
+    span {
+      color: #fff;
+    }
+
+    &::before {
+      opacity: 1;
+      background-color: currentColor;
+      // border: 1px solid currentColor;
+    }
+
+    &::after {
+      background-color: rgba(255, 255, 255, 0.1);
+      background: linear-gradient(transparent, rgba(255, 255, 255, 0.2));
+    }
+
+    &:hover {
+      &::before {
+        opacity: 1;
+      }
+      &::after {
+        opacity: 1;
+      }
+    }
+
+    &:active {
+      &::after {
+        opacity: 1;
+        background-color: rgba(0, 0, 0, 0.1);
+      }
+    }
+
+    // plain --------------------------------
+    &.plain {
+      span {
+        color: currentColor;
+      }
+
+      &::before {
+        opacity: 0.4;
+        background-color: transparent;
+      }
+
+      &::after {
+        opacity: 0.05;
+        background-color: currentColor;
+      }
+
+      &:hover {
+        &::before {
+          opacity: 0.6;
+        }
+        &::after {
+          opacity: 0.15;
+        }
+      }
+
+      &:active {
+        &::after {
+          opacity: 0.2;
+        }
+      }
+
+      &[disabled] {
+        background-color: transparent;
+      }
+    }
+  }
+
+  // type=text ===============================
+  &[type='text'] {
+    &.has-bg {
+      &::before {
+        opacity: 0.1;
+        background-color: currentColor;
+      }
+
+      &:hover {
+        &::before {
+          opacity: 0.2;
+        }
+      }
+    }
+
+    &.customize-bg {
+      &::before {
+        opacity: 1;
+        background-color: var(--bg);
+      }
+
+      &:hover {
+        &::before {
+          opacity: 0.9;
+          background-color: var(--bg);
+        }
+      }
+    }
+
+    &.customize-color {
+      span {
+        color: currentColor;
+      }
+    }
+
+    &::before {
+      background-color: transparent;
+      border-color: transparent;
+    }
+
+    &:hover {
+      &::before {
+        opacity: 0.6;
+      }
+      &::after {
+        opacity: 0.1;
+        background-color: currentColor;
+      }
+    }
+
+    &:active {
+      &::after {
+        opacity: 0.2;
+      }
     }
   }
 
   &.round {
     border-radius: 1em;
-  }
-
-  &[type='text'] {
-    padding: 0 0.2em;
-    border-radius: 1em;
-    background-color: transparent;
-    border-color: transparent;
-
-    &:hover {
-      background-color: transparent;
-      border-color: transparent;
-    }
-
-    &[disabled] {
-      color: #aaa;
-      border-color: transparent;
-      background-color: transparent;
-    }
-  }
-
-  &.animate {
-    animation: ripple-ani 0.3s ease-out;
-    will-change: box-shadow;
   }
 
   &.only-icon {
@@ -160,6 +243,7 @@
   }
 }
 
+// loading 显示与隐藏动画
 .vc-button--loading-enter-active,
 .vc-button--loading-leave-active {
   transition: width 0.2s ease-out;
@@ -168,13 +252,4 @@
 .vc-button--loading-enter-from,
 .vc-button--loading-leave-to {
   width: 0;
-}
-
-@keyframes ripple-ani {
-  0% {
-    box-shadow: 0 0 0px 0px currentColor;
-  }
-  100% {
-    box-shadow: 0 0 5px 3px transparent;
-  }
 }
