--- a/packages/components/tag/index.less
+++ b/packages/components/tag/index.less
@@ -9,7 +9,7 @@
   color: @tag-text-color;
   box-sizing: border-box;
   vertical-align: top;
-  border: 1px solid transparent;
+  border: none;
 
   &--success {
     color: @tag-success-color;
