--- a/packages/components/button/index.less
+++ b/packages/components/button/index.less
@@ -4,10 +4,9 @@
   position: relative;
   padding: 0.25em 0.8em 0.3em;
   font-size: 14px;
-  // color: var(--color, #fff);
   word-break: keep-all;
   border-radius: 0.15em;
-  border: 1px solid transparent;
+  border: none;
   box-sizing: border-box;
   background-color: transparent;
   transition: 0.1s;
@@ -108,6 +107,10 @@
     &::after {
       background-color: rgba(255, 255, 255, 0.1);
       background: linear-gradient(transparent, rgba(255, 255, 255, 0.2));
+    }
+
+    .@{namespace}-button--icon {
+      color: #fff;
     }
 
     &:hover {
@@ -233,8 +236,11 @@
   }
 
   &--icon {
+    position: relative;
+    z-index: 2;
     display: inline-flex;
     width: 1em;
+    color: @btn-default-text-color;
     overflow: hidden;
 
     & + span {
