--- a/packages/components/button/index.less
+++ b/packages/components/button/index.less
@@ -7,6 +7,7 @@
   word-break: keep-all;
   border-radius: 0.15em;
   border: none;
+  color: @btn-default-text-color;
   box-sizing: border-box;
   background-color: transparent;
   transition: 0.1s;
@@ -44,7 +45,6 @@
     position: relative;
     z-index: 2;
     transition: 0.1s;
-    color: @btn-default-text-color;
   }
 
   &[disabled] {
@@ -250,12 +250,12 @@
 }
 
 // loading 显示与隐藏动画
-.vc-button--loading-enter-active,
-.vc-button--loading-leave-active {
+.@{namespace}-button--loading-enter-active,
+.@{namespace}-button--loading-leave-active {
   transition: width 0.2s ease-out;
 }
 
-.vc-button--loading-enter-from,
-.vc-button--loading-leave-to {
+.@{namespace}-button--loading-enter-from,
+.@{namespace}-button--loading-leave-to {
   width: 0;
 }
