perf: 优化tag组件细节

--- a/packages/components/tag/index.less
+++ b/packages/components/tag/index.less
@@ -10,6 +10,7 @@
   box-sizing: border-box;
   vertical-align: top;
   border: none;
+  cursor: pointer;
 
   &--success {
     color: @tag-success-color;
