--- a/packages/components/select/index.less
+++ b/packages/components/select/index.less
@@ -1,6 +1,6 @@
 @import '../../styles/var.less';
 
-.vc-select {
+.@{namespace}-select {
   position: relative;
   display: inline-block;
   width: 100%;
@@ -50,11 +50,11 @@
       transform: translateY(-50%);
       transition: transform 0.3s;
 
-      .is-open & {
+      .@{namespace}-select.is-open & {
         transform: translateY(-50%) rotateZ(-180deg);
       }
 
-      &.vc-icon-error {
+      &.@{namespace}-icon-error {
         display: none;
         cursor: pointer;
 
@@ -66,7 +66,7 @@
           opacity: 0.7;
         }
       }
-      &.vc-icon-arrow-down {
+      &.@{namespace}-icon-arrow-down {
         .clearable:hover & {
           display: none;
         }
@@ -89,7 +89,7 @@
   }
 }
 
-.vc-select-option {
+.@{namespace}-select-option {
   display: flex;
   padding: 0 1em;
   align-items: center;
@@ -119,7 +119,7 @@
   }
 }
 
-.vc-select-tags {
+.@{namespace}-select-tags {
   display: flex;
   flex-wrap: wrap;
   position: absolute;
@@ -131,7 +131,7 @@
   line-height: 1.5em;
   box-sizing: border-box;
 
-  .vc-tag {
+  .@{namespace}-tag--item {
     display: inline-block;
     margin: 0 3px 3px 0;
     padding: 2px 3px;
@@ -168,13 +168,13 @@
       color: @color-text-placeholder;
     }
 
-    .vc-tag + & {
+    .@{namespace}-tag + & {
       margin: 0 0 3px 3px;
     }
   }
 }
 
-.vc-select__dropdown {
+.@{namespace}-select__dropdown {
   position: absolute;
   z-index: 2000;
   width: 200px;
