--- a/packages/components/splitPanel/index.less
+++ b/packages/components/splitPanel/index.less
@@ -1,8 +1,10 @@
-.resize-box {
+@import '../../styles/var.less';
+
+.@{namespace}-split-panel {
   height: 100%;
 
   &.to-horizontal {
-    & > .resize-box-item {
+    & > .@{namespace}-split-panel-item {
       display: inline-block;
       height: 100%;
       vertical-align: top;
