feat: 添加鼠标交互

--- a/packages/components/menuItem/index.less
+++ b/packages/components/menuItem/index.less
@@ -75,7 +75,7 @@
     }
 
     &.is-open {
-      .@{namespace}-menu-child {
+      & > .@{namespace}-menu-child {
         display: block;
       }
     }
