--- a/packages/components/menuItem/index.less
+++ b/packages/components/menuItem/index.less
@@ -10,7 +10,7 @@
     padding: 0 10px;
     line-height: 28px;
 
-    span {
+    div {
       flex: 1;
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -49,20 +49,17 @@
     }
   }
 
-  .@{namespace}-menu-child {
+  .@{namespace}-menu-item--child {
     display: none;
     padding: 5px 0;
-
-    &:not(.is-inline) {
-      position: absolute;
-      z-index: 2000;
-      border: 1px solid #ddd;
-      background-color: #fff;
-      background-color: hsla(0, 0%, 100%, 0.85);
-      backdrop-filter: saturate(100%) blur(10px);
-      border-radius: 5px;
-      box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.05);
-    }
+    position: absolute;
+    z-index: 2000;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    background-color: hsla(0, 0%, 100%, 0.85);
+    backdrop-filter: saturate(100%) blur(10px);
+    border-radius: 5px;
+    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.05);
 
     .@{namespace}-menu-item--header {
       min-width: 150px;
@@ -70,13 +67,43 @@
   }
 
   &.inline-mode {
-    .@{namespace}-menu-child {
-      padding: 0;
+    &:not(.is-collapse) {
+      .@{namespace}-menu-item--child {
+        padding: 0;
+        position: inherit;
+        border: none;
+        box-shadow: none;
+        border-radius: 0;
+      }
     }
 
     &.is-open {
-      & > .@{namespace}-menu-child {
+      & > .@{namespace}-menu-item--child {
         display: block;
+      }
+    }
+  }
+
+  &.is-collapse {
+    .@{namespace}-menu-item--child {
+      padding: 5px 0;
+      position: absolute;
+      z-index: 2000;
+    }
+    & > .@{namespace}-menu-item--header {
+      i {
+        transform: rotate(0deg);
+      }
+    }
+
+    &.is-open {
+      & > .@{namespace}-menu-item--header {
+        i {
+          transform: rotate(0deg);
+        }
+      }
+      & > .@{namespace}-menu-item--child {
+        display: none;
       }
     }
   }
